# poseResearch

./: README.md  main.py  playground.ipynb  pyproject.toml
PoseGPT/models/: poseGPT.py  quantize.py
PoseGPT/models/blocks/: convolutions.py  mingpt.py
PoseGPT/threed/: geometry.py  skeleton.py
PoseGPT/utils/: body_model.py
dataset/: dataloader.py
models/TCPFormer/: tcpformer_playground.ipynb  train.py
models/TCPFormer/model/: Model.py
models/TCPFormer/utils/: learning.py
validation/: plane_pose_estimation.py  pose_validation.py  validate.py  validation_playground.ipynb
