[project]
name = "poseresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easydict>=1.13",
    "einops>=0.8.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "opencv-python>=4.11.0.86",
    "roma>=1.5.2.1",
    "scikit-learn>=1.6.1",
    "threed>=0.0.2",
    "timm>=1.0.15",
    "ultralytics>=8.3.139",
    "wandb>=0.19.11",
]
